--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,1 +1,26 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+/* latin */
+@font-face {
+  font-family: 'Sora';
+  font-style: normal;
+  font-weight: 100 800;
+  font-display: swap;
+  src: url('assets/fonts/Sora/Sora-VariableFont_wght.ttf') format('truetype');
+}
+
+@theme {
+  --font-display: 'Sora', 'sans-serif';
+  --breakpoint-3xl: 120rem;
+
+  --color-neutral-900: hsl(0, 0%, 7%);
+  --color-neutral-800: hsl(0, 0%, 15%);
+  --color-neutral-700: hsl(0, 0%, 23%);
+  --color-neutral-500: hsl(240, 3%, 46%);
+  --color-neutral-400: hsl(240, 1%, 59%);
+  --color-blue-600: hsl(214, 100%, 55%);
+  --color-blue-400: hsl(210, 100%, 65%);
+  --color-red-500: hsl(354, 63%, 57%);
+  --color-green-500: hsl(140, 63%, 57%);
+  --color-yellow-400: hsl(49, 85%, 70%);
+}
