--- a/public/output.css
+++ b/public/output.css
@@ -328,6 +328,9 @@
   .h-full {
     height: 100%;
   }
+  .h-screen {
+    height: 100vh;
+  }
   .w-2\.5 {
     width: calc(var(--spacing) * 2.5);
   }
